cmake_minimum_required(VERSION 3.9)
project(LabCheck1)

set(CMAKE_CXX_STANDARD 11)

add_executable(LabCheck1 main.cpp src/Lab1/Random.cpp src/Lab1/Random.h src/Lab2/Search.cpp src/Lab2/Search.h src/Lab3/Fiblaq.cpp src/Lab3/Fiblaq.h src/Lab4/Sort.h src/Lab4/Sort.cpp src/Lab5/CaluaterSort.cpp src/Lab5/CaluaterSort.h)